[gd_scene load_steps=34 format=3 uid="uid://cxej40hx3cxdc"]

[ext_resource type="Script" path="res://ui/player_hud.gd" id="1_of0jw"]
[ext_resource type="PackedScene" uid="uid://b1f0pb7wkyn1" path="res://ui/resource_indicator/resource_indicator.tscn" id="3_hrmpd"]
[ext_resource type="PackedScene" uid="uid://cc8j5p14wpk8e" path="res://ui/clock/clock.tscn" id="3_wl5ax"]
[ext_resource type="Shader" uid="uid://d07riooyidmp1" path="res://world/lighting/vignette.gdshader" id="4_6i6ec"]
[ext_resource type="PackedScene" uid="uid://pk6h7e8bh5y6" path="res://ui/player_interface/fast_forward_btn.tscn" id="4_hxq26"]
[ext_resource type="Script" uid="uid://chr4i30igmkp6" path="res://world/lighting/vignette.gd" id="5_anucx"]
[ext_resource type="Texture2D" uid="uid://dm2ft8dsj6hxq" path="res://ui/player_interface/info_box/nine_tile_menu.png" id="6_08otm"]
[ext_resource type="Script" uid="uid://cawvireiybr1l" path="res://ui/player_interface/overlay_buttons.gd" id="9_2ct0b"]
[ext_resource type="PackedScene" uid="uid://brejyjscqrd5j" path="res://ui/tree_menu/tree_menu.tscn" id="9_08otm"]
[ext_resource type="PackedScene" uid="uid://dnqphbl5e44tn" path="res://ui/screen_ui/tech_menu/tech_menu.tscn" id="9_bi8hs"]
[ext_resource type="Script" uid="uid://t3rh6n673tko" path="res://ui/menu_buttons.gd" id="9_oqbvt"]
[ext_resource type="PackedScene" uid="uid://71cpfqvfyp5d" path="res://ui/player_interface/info_box/info_box.tscn" id="10_hrmpd"]
[ext_resource type="Theme" uid="uid://b6tppincjordy" path="res://ui/main_ui_theme.tres" id="10_kxjjr"]
[ext_resource type="Texture2D" uid="uid://bwloauj8h2wlf" path="res://ui/screen_ui/almanac_menu/almanac_icon_outline.png" id="12_p4ap4"]
[ext_resource type="Texture2D" uid="uid://1vj4n1qkqw0w" path="res://ui/screen_ui/research_menu/research_tree_icon_better.png" id="13_w42vh"]
[ext_resource type="PackedScene" uid="uid://d3poa2n2ryxpv" path="res://ui/info_box/hover_info_box/hover_info_box.tscn" id="13_x7jpl"]
[ext_resource type="PackedScene" uid="uid://cj8rykw3ejjax" path="res://ui/notification_log/notification_log.tscn" id="14_wplf5"]
[ext_resource type="Script" path="res://ui/fps_counter.gd" id="16_tuu6u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_anucx"]
shader = ExtResource("4_6i6ec")
shader_parameter/alpha = 0.75
shader_parameter/inner_radius = 0.16
shader_parameter/outer_radius = 1.34
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p4ap4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w42vh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lwis7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8va8i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_st8cg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k7cr1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wernx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_agr48"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_plh3k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xkwux"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wf20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqv6w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rpog2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nx65i"]

[node name="PlayerHUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_of0jw")

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_anucx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_anucx")

[node name="NotificationLog" parent="." instance=ExtResource("14_wplf5")]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -230.0
offset_bottom = -230.0
grow_vertical = 2

[node name="ResourceIndicator" parent="." instance=ExtResource("3_hrmpd")]

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -228.0
offset_bottom = 67.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_08otm")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Clock" parent="NinePatchRect2" instance=ExtResource("3_wl5ax")]
position = Vector2(163, 66)
scale = Vector2(2, 2)

[node name="FastForwardBtn" parent="NinePatchRect2" instance=ExtResource("4_hxq26")]
layout_mode = 0
offset_left = 185.0
offset_top = 82.0
offset_right = 218.0
offset_bottom = 114.0
mouse_default_cursor_shape = 2

[node name="OverlayButtons" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.245
anchor_right = 1.0
anchor_bottom = 0.245
offset_left = -158.0
offset_top = -15.76
offset_right = -16.0
offset_bottom = 56.24
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("9_2ct0b")

[node name="WaterOverlayButton" type="Button" parent="OverlayButtons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("10_kxjjr")
text = "WATER VIEW"

[node name="HealthOverlayButton2" type="Button" parent="OverlayButtons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("10_kxjjr")
text = "HEALTH VIEW"

[node name="MenuButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("9_oqbvt")

[node name="DestroyButton" type="Button" parent="MenuButtons"]
unique_name_in_owner = true
modulate = Color(1, 0.592157, 0.368627, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = -882.0
offset_top = -51.0
offset_right = -832.0
offset_bottom = -1.0
mouse_default_cursor_shape = 2
theme = ExtResource("10_kxjjr")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "DESTROY"

[node name="MarginContainer" type="MarginContainer" parent="MenuButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MenuButtons/MarginContainer"]
layout_mode = 2

[node name="AlmanacButton" type="Button" parent="MenuButtons/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("10_kxjjr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p4ap4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_w42vh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lwis7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8va8i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_st8cg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_k7cr1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wernx")
flat = true

[node name="AlmanacIcon" type="TextureRect" parent="MenuButtons/MarginContainer/HBoxContainer/AlmanacButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_p4ap4")
expand_mode = 3
stretch_mode = 5

[node name="ResearchButton" type="Button" parent="MenuButtons/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("10_kxjjr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_agr48")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_plh3k")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xkwux")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8wf20")
theme_override_styles/hover = SubResource("StyleBoxEmpty_eqv6w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rpog2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nx65i")
flat = true

[node name="ResearchIcon" type="TextureRect" parent="MenuButtons/MarginContainer/HBoxContainer/ResearchButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_w42vh")
expand_mode = 2
stretch_mode = 5

[node name="TechMenu" parent="." instance=ExtResource("9_bi8hs")]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -324.0
offset_bottom = -324.0
grow_vertical = 2

[node name="InfoBox" parent="." instance=ExtResource("10_hrmpd")]
visible = false

[node name="TreeMenu" parent="." instance=ExtResource("9_08otm")]

[node name="HoverInfoBox" parent="." instance=ExtResource("13_x7jpl")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 251.0
offset_right = -100.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 306.0
offset_top = 5.0
offset_right = 905.0
offset_bottom = 114.0
theme = ExtResource("10_kxjjr")
theme_override_font_sizes/normal_font_size = 32
text = "FPS:100"
script = ExtResource("16_tuu6u")

[connection signal="pressed" from="OverlayButtons/WaterOverlayButton" to="OverlayButtons" method="_on_water_overlay_pressed"]
[connection signal="pressed" from="OverlayButtons/HealthOverlayButton2" to="OverlayButtons" method="_on_health_overlay_pressed"]
